@@ -1,4 +1,4 @@
-/* $Id: libarg.c,v 1.2 2003-10-28 12:34:53 oops Exp $ */
+/* $Id: libarg.c,v 1.3 2003-10-28 14:05:35 oops Exp $ */
 #include <common.h>
 #include <libarg.h>
 
@@ -156,6 +156,8 @@ char ** argv_make ( char * stream, int *oargc ) {
 
 		token = strtok_r (NULL, delimiters, &btoken);
 	}
+
+	oargv[i+1] = NULL;
 
 	ofree ( tmp );
 
