@@ -1,6 +1,6 @@
 Changelog
 
-$Id: Changes,v 1.18 2003-10-28 12:09:00 oops Exp $
+$Id: Changes,v 1.19 2003-10-28 14:05:35 oops Exp $
 
 * tue, Oct 28 2003
 	by JoungKyun Kim <http://www.oops.org>
@@ -9,6 +9,7 @@ $Id: Changes,v 1.18 2003-10-28 12:09:00 oops Exp $
           ofree_array
           get_whitespace
           o_getopt
+	- fixed typo in olibc-config.h.in
 
 * sat, Sep 27 2003
 	by JoungKyun Kim <http://www.oops.org>
